<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/designation_text_view2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        tools:text="C.E.O" />


    <android.support.v7.widget.AppCompatTextView
        style="@style/SubUserBio"
        android:layout_gravity="start"
        android:text="@string/designation"
        android:textStyle="bold"
        android:textColor="#A2AAB0" />

    <android.support.v7.widget.AppCompatTextView
        style="@style/SubUserBio"
        android:layout_gravity="start"
        android:layout_marginTop="5dp"
        android:text="@string/employ_bio"
        android:textAlignment="textStart"
        android:textStyle="bold" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/bio_text_view2"
        style="@style/UserBio"
        tools:text="@string/user_bio" />

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/card"
        style="@style/CardTwo"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/background"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/call"
                        android:layout_width="0dp"
                        android:layout_height="70dp"
                        android:layout_weight="1"
                        android:contentDescription="@null"
                        android:padding="5dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_action_call"
                        android:background="#0000" />

                </LinearLayout>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/repo_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/call"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />
            </LinearLayout>

            <View style="@style/View2">
            </View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/text"
                        android:layout_width="0dp"
                        android:layout_height="70dp"
                        android:layout_weight="1"
                        android:contentDescription="@null"
                        android:padding="5dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_action_text"
                        android:background="#0000" />

                </LinearLayout>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/followers_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/text"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />
            </LinearLayout>

            <View style="@style/View2">
            </View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/email"
                        android:layout_width="0dp"
                        android:layout_height="70dp"
                        android:layout_weight="1"
                        android:contentDescription="@null"
                        android:padding="5dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_action_email"
                        android:background="#0000" />
                </LinearLayout>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/following_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/email"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp">
        <android.support.v7.widget.AppCompatTextView
            style="@style/CategoryStyle2"
            android:text="@string/overview"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">
                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/address_text_view2"
                    style="@style/Widget.TextEdit2" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp">
        <android.support.v7.widget.AppCompatTextView
            style="@style/CategoryStyle2"
            android:text="@string/gender"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/gender_text_view2"
                style="@style/Widget.TextEdit2" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp">
        <android.support.v7.widget.AppCompatTextView
            style="@style/CategoryStyle2"
            android:text="@string/status"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/status_text_view2"
                style="@style/Widget.TextEdit2" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp">
        <android.support.v7.widget.AppCompatTextView
            style="@style/CategoryStyle2"
            android:text="@string/employ.details"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/id_text_view2"
                    style="@style/Widget.TextEdit2" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/employ_date_text_view2"
                    style="@style/Widget.TextEdit2" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/dpt_text_view2"
                    style="@style/Widget.TextEdit2" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp">
        <android.support.v7.widget.AppCompatTextView
            style="@style/CategoryStyle2"
            android:gravity="center_vertical"
            android:text="@string/salary_detail"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/salary_text_view2"
                    style="@style/Widget.TextEdit2" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tax_text_view2"
                    style="@style/Widget.TextEdit2" />
                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/bank_name_text_view2"
                        style="@style/Widget.TextEdit2" />
                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/bank_acct_text_view2"
                        style="@style/Widget.TextEdit2"
                        android:layout_marginBottom="16dp" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/phone_text_view2"
                style="@style/Widget.TextEdit2"
                android:visibility="gone" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/email_text_view2"
                style="@style/Widget.TextEdit2"
                android:visibility="gone" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>